<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFiltro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="8dp"
        app:chipSpacingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleLine="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFiltroVerdura"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_verdura" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFiltroCarne"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_carne" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFiltroPescado"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_pescado" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFiltroPostre"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_postre" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFiltroLactosa"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_lactosa" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFiltroFruta"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_fruta" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>

